@@ -532,6 +532,7 @@ N(OP_MercenaryDataUpdate),
 N(OP_MercenaryCommand),
 N(OP_MercenarySuspendRequest),
 N(OP_MercenarySuspendResponse),
+N(OP_MercenaryUnsuspendResponse),
 N(OP_MercenaryDataUpdateRequest),
 N(OP_MercenaryDismiss),
 N(OP_MercenaryTimerRequest),
