@@ -545,7 +545,8 @@ OP_MercenaryDataUpdate=0x57f2		#
 OP_MercenaryCommand=0x50c1			#
 OP_MercenarySuspendRequest=0x3c58	#
 OP_MercenarySuspendResponse=0x4b82	#
-OP_MercenaryDataUpdateRequest=0x05f1	#
+OP_MercenaryUnsuspendResponse=0x5fe3
+OP_MercenaryDataUpdateRequest=0x05f1
 OP_MercenaryDismiss=0x319a			#
 OP_MercenaryTimerRequest=0x184e		#
 
