@@ -3,6 +3,10 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 == 01/25/2013 ==
 Sorvani: Implemented max aggro from stun proc set to 400. It is rule based set rule to -1 for unlimited.
 Derision: RoF: Should fix x10 Buff bug.
+Trevius: Reworked some of the code dealing with Mercenary packets and spawning them.  There is still some work to be done, but the basics are more solid now.
+Trevius: Mercenaries function much more consistently now for Hiring, Suspending, Unsuspending, Dismissing.
+Trevius: Mercenaries no longer fail to group up after being hired, unsuspended or after zoning/logging in.
+Trevius: RoF: Mercenaries in RoF are now fully functional.
 
 == 01/24/2013 ==
 Trevius: RoF: The #fixmob command can now go up to race 724 when cycling through races.
